# mailer

./: AGENTS.md  AUDIT.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  SESAME_PLAN.md  USAGE.md  build-all.ps1  compiler.ps1
.github/workflows/: release.yml
.sisyphus/notepads/sesame-analysis/: decisions.md  report.md
.sisyphus/notepads/sesame-fixes/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: Purgatio.md
docs/: SECURITY.md  USAGE.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_ratchet_frame.rs  padding_roundtrip.rs  remove_padding.rs
plans/: Evangelium.md  Genesis.md  Nomen.md  sesame-mvp-plan.md  sniff-plan.md
src/: auth.rs  config.rs  crypto.rs  lib.rs  main.rs  obfuscate.rs  os_hardening.rs  panic.rs  peer.rs  protocol.rs  ratchet.rs  session.rs  tls.rs  tui.rs  types.rs
tests/: integration_test.rs
