[package]
name = "sesame_cli"
version = "0.2.0"
edition = "2024"
description = "P2P encrypted chat with deniable authentication, panic mode, and multi-peer mesh"
repository = "https://github.com/cruemy/sesame"
homepage = "https://github.com/cruemy/sesame"
license = "MIT"
readme = "README.md"
rust-version = "1.85"
keywords = ["p2p", "encrypted-chat", "deniable-auth", "panic-mode", "mesh"]
categories = ["cryptography", "command-line-utilities"]

[[bin]]
name = "sesame"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.28"
crossterm = "0.28"
os-memlock = "0.1"
libc = "0.2"
socket2 = "0.5"
spake2 = { version = "0.5.0-pre.0", features = ["getrandom"] }
dirs = "6"
